[ADD] Tests and fixes

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,11 +7,19 @@ else
 endif
 
 ifeq (detected_OS,Darwin)
-	RUN := export NODE_VERSION=$$(cat ../NODE_VERSION) && docker run --rm -u -v $$PWD:/app/ -w /app/ node:$$NODE_VERSION
+	RUN := export NODE_VERSION=$$(cat ../NODE_VERSION) && docker run --rm -u -v $$PWD/../frontend/counter-app:/app/ -w /app/ node:$$NODE_VERSION
 else
-	RUN := export NODE_VERSION=$$(cat ../NODE_VERSION) && docker run --rm -u $$UID:$$GID -v $$PWD:/app/ -w /app/ node:$$NODE_VERSION
+	RUN := export NODE_VERSION=$$(cat ../NODE_VERSION) && docker run --rm -u $$UID:$$GID -v $$PWD/../frontend/counter-app:/app/ -w /app/ node:$$NODE_VERSION
 endif
+
+.PHONY: install
+install:
+	$(RUN) npm install
 
 .PHONY: dev
 dev:
 	docker-compose up --build
+
+.PHONY: test
+test:
+	docker-compose run --rm --build django-api python manage.py test
